cmake_minimum_required(VERSION 3.28.0)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")

include(Format)
include(Benchmark)

Format(.)

project(procpp VERSION 0.0.1 LANGUAGES CXX)

add_subdirectory(bm_placement_new)
add_subdirectory(namespaces)
add_subdirectory(types)
add_subdirectory(limits)
add_subdirectory(modules)
add_subdirectory(threeway)
add_subdirectory(structured_bindings)
add_subdirectory(consteval)
add_subdirectory(type_inference)
add_subdirectory(string_view)
add_subdirectory(ownership)
add_subdirectory(vocal)
add_subdirectory(forward)
add_subdirectory(operators)
add_subdirectory(swap)
add_subdirectory(multiple_inheritance)
add_subdirectory(covariant)
add_subdirectory(explicit_instantiation)
add_subdirectory(streams)
add_subdirectory(locale)
add_subdirectory(filesystem)
add_subdirectory(regex)
add_subdirectory(date_time)
add_subdirectory(random)
add_subdirectory(vocabulary_types)
add_subdirectory(exception)
add_subdirectory(numerics)
add_subdirectory(iterators)
add_subdirectory(sequential)
add_subdirectory(ordered_associative)
add_subdirectory(unordered_associative)
add_subdirectory(functions)
add_subdirectory(algorithms)
add_subdirectory(expression_templates)
add_subdirectory(static_polymorphism)
add_subdirectory(type_erasure)
add_subdirectory(sfinae)
add_subdirectory(cloner)
add_subdirectory(policy)
add_subdirectory(barrier)
